deploy/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helm-demo
  labels:
    name: helm-demo
