deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-demo-app
  labels:
    app: helm-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-demo-app
  template:
    metadata:
      labels:
        app: helm-demo-app
    spec:
      containers:
      - name: flask
        image: inemyrovsk/helm-demo:v6
        volumeMounts:
          - name: secret
            mountPath: "/mnt/"
            readOnly: true
        ports:
        - containerPort: 80
      volumes:
        - name: secret
          configMap:
            name: secret
