deploy/templates/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      serviceAccountName: getsecrets
      containers:
      - name: flask
        image: inemyrovsk/helm-demo:v11
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/"
            readOnly: true
        ports:
        - containerPort: 5000
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: secrets-example
      nodeSelector:
        environment: test
