deploy/templates/ingress_test.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helm-demo
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-09ece7f8dd8be0a2e, subnet-0a64086edb01b3713, subnet-0d38c0d2fb3eaa943
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:424386943850:certificate/1d4fa47e-cf10-405e-8ad2-e4dc6de7073b
    alb.ingress.kubernetes.io/success-codes: 200,404,301
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: helm-demo--1
    alb.ingress.kubernetes.io/group.name: helm-demo--group-1

spec:
  rules:
    - host: demo-test.swag.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: helm-demo-app
                port:
                  number: 80
